--- a/Lab02/build.gradle
+++ b/Lab02/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation('org.jboss.weld.se:weld-se-core:5.1.0.Final')
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
+    implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.15.2'
 
     implementation 'org.slf4j:slf4j-api:2.0.9'
     testImplementation 'org.slf4j:slf4j-simple:2.0.9'
