--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/lab03
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/lab04?createDatabaseIfNotExist=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
