--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/lab04?createDatabaseIfNotExi
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.data.rest.base-path=/api/v1
