candidate page + delete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.base-path=/api/v1
+spring.data.rest.default-page-size=10
+
