--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.url=jdbc:mariadb://localhost:3306/lab04?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.data.rest.base-path=/api/v1
-spring.data.rest.default-page-size=10
 
