mapping entity + repo extends jpaRepo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.password=password
 spring.datasource.username=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=
+spring.datasource.url=jdbc:mariadb://localhost:3306/lab05?createDatabaseIfNotExist=true
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 
