--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+spring.datasource.url=jdbc:h2:file:./data/son;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.username=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/lab05?createDatabaseIfNotExist=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
-
 
