--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.5'
-    id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'vn.edu.iuh.fit'
@@ -9,12 +9,6 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
 }
 
 repositories {
@@ -25,25 +19,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.session:spring-session-core'
-    implementation 'org.springframework.session:spring-session-jdbc'
-
-
-//    implementation 'org.springframework.session:spring-session-jdbc'
-    implementation 'com.h2database:h2:2.2.224'
-
-    implementation 'org.webjars:bootstrap:5.3.2'
-    implementation 'org.slf4j:slf4j-api:2.0.7'
-    testImplementation 'org.slf4j:slf4j-simple:2.0.9'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-    //data faker
-    implementation 'net.datafaker:datafaker:2.0.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'net.datafaker:datafaker:2.0.2'
 }
 
 tasks.named('test') {
