--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.main.allow-circular-references=true
 
-#spring.datasource.url=jdbc:h2:file:/data/testDb
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=a
-spring.datasource.password=a
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#primary datasource
+spring.datasource.url=jdbc:mariadb://localhost:3306/testDb?CreateDatabaseIfNotExist=true
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=password
+
+#secondary datasource
+temp.datasource.url=jdbc:h2:mem:test
+temp.datasource.driverClassName=org.h2.Driver
+temp.datasource.username=a
+temp.datasource.password=a
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
+spring.session.jdbc.initialize-schema=always
